# glfw-app

./: CMakeLists.txt  README.md
include/: stb_image.h  stb_image_write.h
include/glad/: glad.h
shaders/: fragment_shader.glsl  light_fragment_shader.glsl  vertex_shader.glsl
src/: glad.c  glfw_utils.h  light.h  main.cpp  mesh.h  model.h  object.h  world.h
src/graphics/: camera.cpp  camera.h  color.cpp  color.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
